home.html changed to start 'homepage', created login.html for login site, controller created for handle login function, and fucntion added for handle error message if login information is incorrect

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -10,8 +10,11 @@
   <h1>Min Hemsida!</h1>
 
       <ul>
-        <li><a th:href="@{/register}">Registerings sida</a></li>         
+        <li><a th:href="@{/register}">Registerings sida</a></li> 
+        <li><a th:href="@{/login}">Logga in</a></li>         
       </ul>
+
+
 
 </body>
 </html>
