Added new configation for login and logout with default spring security

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -11,7 +11,9 @@
 
       <ul>
         <li><a th:href="@{/register}">Registerings sida</a></li> 
-        <li><a th:href="@{/login}">Logga in</a></li>         
+        <li><a th:href="@{/login}">Logga in</a></li>    
+        <li><a th:href="@{/logout}">Logga ut</a></li>
+     
       </ul>
 
 
