--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -9,13 +9,23 @@
 <body>
   <h1>Min Hemsida!</h1>
 
+  <div>
       <ul>
-        <li><a th:href="@{/register}">Registerings sida</a></li> 
-        <li><a th:href="@{/login}">Logga in</a></li>    
-        <li><a th:href="@{/logout}">Logga ut</a></li>
-     
-      </ul>
+        <div>
+          <a th:href="@{/register}">Registerings sida</a>
+        </div>
+        <div>
+          <span sec:authorize="isAuthenticated()"><a th:href="@{/inventory}">Mina ordrar</a></span></li>  
+        </div>
 
+        <div>
+          <span sec:authorize="!isAuthenticated()"><a th:href="@{/login}">Logga in</a></span></li>  
+        </div>
+        <div>
+          <span sec:authorize="isAuthenticated()" ><a th:href="@{/logout}">Logga ut</a></span>
+        </div>
+      </ul>
+ </div>
 
 
 </body>
