--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -6,20 +6,33 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="">
 
-        Förnamn: <input type="text">
+    <form th:action="@{/register}" method="post" role="form" th:object="${user}">
+        <label for="firstName">Förnamn:</label>
+        <input th:field="*{firstName}" type="text" id="firstName" name="firstName" placeholder="Enter your Firstname"
+        required>
         <br/>
-        EfterNamn: <input type="text">
+
+        <label for="lastName">Efternamn:</label>
+        <input th:field="*{lastName}" type="text" id="lastName" name="lastName" placeholder="Enter your Lastname"
+        required>
         <br/>
-        Användarnamn: <input type="text">
+
+        <label for="username">Användarnamn:</label>
+        <input th:field="*{username}" type="text" id="username" name="username" placeholder="Enter your Username"
+        required>
         <br/>
-        Email: <input type="text">
+
+        <label for="email">Email:</label>
+        <input th:field="*{email}" type="text" id="email" name="email" placeholder="Enter your Email"
+        required>
         <br/>
-        Lösenord: <input type="text">
-        <br/>
+
+        <label for="password">Password:</label>
+        <input th:field="*{password}" type="password" id="password" name="password" placeholder="Enter your Password" required>
+
         <input type="submit" value="Registrera">
-
     </form>
+
 </body>
 </html>
