--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -3,44 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
     <title>Document</title>
 </head>
 <body>
 
-   
-    <form th:action="@{/register}" method="post" role="form" th:object="${user}">
-        <label for="firstName">Förnamn:</label>
-        <input th:field="*{firstName}" type="text" id="firstName" name="firstName" placeholder="Enter your Firstname"
-        required>
-        <br/>
+    <header>
+        <h1>Registrering</h1>
+    </header>
 
-        <label for="lastName">Efternamn:</label>
-        <input th:field="*{lastName}" type="text" id="lastName" name="lastName" placeholder="Enter your Lastname"
-        required>
-        <br/>
 
-        <label for="username">Användarnamn:</label>
-        <input th:field="*{username}" type="text" id="username" name="username" placeholder="Enter your Username"
-        required>
-        <br/>
+    <main>
+        <form th:action="@{/register}" method="post" role="form" th:object="${user}">
+            <label for="firstName">Förnamn:</label>
+            <input th:field="*{firstName}" type="text" id="firstName" name="firstName" placeholder="Enter your Firstname" required>
 
-        <label for="email">Email:</label>
-        <input th:field="*{email}" type="text" id="email" name="email" placeholder="Enter your Email"
-        required>
-        <br/>
+            <label for="lastName">Efternamn:</label>
+            <input th:field="*{lastName}" type="text" id="lastName" name="lastName" placeholder="Enter your Lastname"
+            required>
 
-        <label for="password">Password:</label>
-        <input th:field="*{password}" type="password" id="password" name="password" placeholder="Enter your Password" required>
+            <label for="username">Användarnamn:</label>
+            <input th:field="*{username}" type="text" id="username" name="username" placeholder="Enter your Username"
+            required>
 
-        <input type="submit" value="Registrera">
+            <label for="email">Email:</label>
+            <input th:field="*{email}" type="text" id="email" name="email" placeholder="Enter your Email"
+            required>
 
-    </form>
-    <div>
-        <span th:if="${Userexist}" style="color: red;">Användarnamn upptagen </span>
-        <span th:if="${Emailexist}" style="color: red;">E-postadress upptagen </span>
+            <label for="password">Password:</label>
+            <input th:field="*{password}" type="password" id="password" name="password" placeholder="Enter your Password" required>
 
-    </div>
+            <input type="submit" value="Registrera">
 
- </span>
+        </form>
+
+        <a th:href="@{/}">Tillbaka till startsidan</a>
+
+
+        <div th:if="${Userexist}" style="color: red;">Användarnamn upptagen</div>
+        <div th:if="${Userexist}" style="color: red;"> E-postadress upptagen</div>
+    </main>
+
 </body>
 </html>
