--- a/src/main/resources/templates/product-details.html
+++ b/src/main/resources/templates/product-details.html
@@ -32,7 +32,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 Din Webbutik. Alla rättigheter förbehållna.</p>
+        <p>&copy; 2025 PowerPulse</p>
     </footer>
 
 </body>
